[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/enemy/arc_shooter/arc_improved.gd" type="Script" id=1]
[ext_resource path="res://scenes/shared/single_direct_hit.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[node name="ArcImporved" type="Spatial"]
transform = Transform( 1.5, 0, 0, 0, 0.2, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )
speed = 20.0

[node name="Area" type="Area" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.993821 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 256

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="single_direct_hit" parent="." instance=ExtResource( 2 )]
damage = 20.0
force = 2.0

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
